--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <img src="logo3.png" alt="Hair Day Logo" width="120px">
        
         <div class="footer-text">
-            <p>Copyright &copy; 2024, Roseph Darl. Made with &hearts;.</p>
+            <p>Copyright &copy; 2024, ALVIN R TOLEDO JR. Made with &hearts;.</p>
         </div>
     </footer>
 </body>
